tests/lean/pureCoeIssue.lean.expected.out
pureCoeIssue.lean:6:2-6:4: error: type mismatch
  f1
has type
  Nat → IO Unit : Type
but is expected to have type
  IO PUnit : Type
pureCoeIssue.lean:14:2-14:7: error: type mismatch
  f2 10
has type
  Nat → IO Unit : Type
but is expected to have type
  IO PUnit : Type
